# UnifyFL

./: .dockerignore  .gitignore  .tmuxinator.yml  Dockerfile  README.md  SETUP.md  client_requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt
base/: ipfs.py
blockchain/abi/: AsyncRound.json
blockchain/src/: AsyncRound.sol  RandomNumbers.sol  Registration.sol  SyncRound.sol
configs/: agg.json  party.json  super.json  sync.json
configs/async/: agg.config.json
configs/baseline/: agg.config.json
configs/sync/: agg.config.json
contracts/: AsyncRound.sol  README.md  RandomNumbers.sol  Registration.sol  SyncRound.sol
contracts/abi/: AsyncRound.json  RandomNumbers.json  Registration.json  SyncRound.json
deploy_scripts/: async.yml  deploy_contracts.py  install_dependencies_main.sh  prepare_cifar10.sh  setup_unifyfl.sh
ekatrafl/: README.md  sync.py
ekatrafl/async/: async.py  scorer.py
ekatrafl/bad_actor/: async_agg.py  async_scorer.py  sync_agg.py  sync_scorer.py
ekatrafl/base/: client.py  contract.py  custom_server.py  ipfs.py  model.py  policies.py  single_level.py  strategy.py
ekatrafl/baseline/: README.md  agg.py  super.py
ekatrafl/sync/: scorer.py  sync.py  watchman.py
models/: cifar.py  emnist.py  imagenet.py  imdb.py  mnist.py
multilayerfl/: client.py  server.py  server_client.py
scripts/: async.yml  deploy_contracts.py  download_ds.py  evaluate_models.py  evaluate_results.sh  generate_niid_dirichlet.py  get_account.py  get_results.sh  geth.yml  plot.json  plot_f.py  plot_results.py  updatejson.py
tmux_scripts/: async.yml  baseline.yml  deploy_contracts.py  experiments.txt  start_async.sh  updatejson.py
unifyfl/: README.md
unifyfl/async/: async.py  scorer.py
unifyfl/bad_actor/: async_agg.py  async_scorer.py  sync_agg.py  sync_scorer.py
unifyfl/base/: client.py  custom_server.py  model.py  single_level.py
unifyfl/baseline/: agg.py  super.py
unifyfl/sync/: scorer.py  sync.py  watchman.py
