[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "unifyfl"
version = "1.0.0"
description = ""
authors = ["Sarang S <f20210966@goa.bits-pilani.ac.in>", "Druva D <f20220131@goa.bits-pilani.ac.in>", "Aditya Shiva Sharma <f20221159@goa.bits-pilani.ac.in>"]
packages = [{include = "unifyfl"}]

[tool.poetry.scripts]
party = "unifyfl.base.client:main"
sync-agg = "unifyfl.sync.sync:main"
sync-scorer = "unifyfl.sync.scorer:main"
sync-watchman = "unifyfl.sync.watchman:main"
async-agg = "unifyfl.async.async:main"
async-scorer = "unifyfl.async.scorer:main"
base-sup="unifyfl.baseline.super:main"
base-agg="unifyfl.baseline.agg:main"
single-level='unifyfl.base.single_level:main'


[tool.poetry.dependencies]
python = "^3.10"
flwr = "1.7.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
aioipfs = "^0.6.3"
web3 = "^6.4.0"
tqdm = "^4.66.1"
opacus = "1.4.1"
datasets = "^3.4.1"
spur = "^0.3.23"
aiohttp = "==3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
# psrecord = { git = "https://github.com/Ceres445/psrecord", branch = "master" }
# matplotlib = "^3.8.2"
web3 = { extras = ["tester"], version = "^6.4.0" }
